basic layout done

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
-}
+@import "../src/styles/Resets.css";
+@import "../src/styles/CustomProperties.css";
+@import "../src/styles/ReusedStyles.css";
+@import "../src/styles/Header.css";
+@import "../src/styles/Hero.css";
+@import "../src/styles/About.css";
+@import "../src/styles/Services.css";
+@import "../src/styles/Featured.css";
+@import "../src/styles/Footer.css";
+@import "../src/styles/Cta.css";
+@import "../src/styles/BlogList.css";
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+
+
+ /*-----------------------------------*\
+  #MEDIA QUERIES
+\*-----------------------------------*/
+
+/**
+ * responsive for larger than 600px screen
+ */
+
+ @media (min-width: 600px) {
+
+ }
+ 
+ /**
+  * responsive for larger than 768px screen
+  */
+ 
+  @media (min-width: 768px) {
+ 
   }
-}
+ 
+ 
+ /**
+  * responsive for larger than 992px screen
+  */
+ 
+  @media (min-width: 992px) {
+ 
+ }
+ /**
+ * responsive for larger than 1200px screen
+ */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (min-width: 1200px) {
+  
 }
