Listing and contact btn added

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@
 @import "../src/styles/Footer.css";
 @import "../src/styles/Cta.css";
 @import "../src/styles/BlogList.css";
+@import "../src/styles/Listing.css";
+
 
 
 
