--- a/src/styles/ReusedStyles.css
+++ b/src/styles/ReusedStyles.css
@@ -60,6 +60,36 @@ button, a { transition: var(--transition); }
 
 .btn:is(:hover, :focus)::before { width: 100%; }
 
+/* second btn style below */
+
+.btn2 {
+  position: relative;
+  background: var(--white);
+  color: var(--orange-soda);
+  font-family: var(--ff-poppins);
+  font-size: var(--fs-5);
+  text-transform: var(--text-transform, capitalize);
+  border: 1px solid var(--orange-soda);
+  padding: 10px 20px;
+  z-index: 1;
+}
+
+
+
+.btn2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--white);
+  transition: var(--transition);
+  z-index: -1;
+}
+
+.btn2:is(:hover, :focus)::before { width: 100%; }
+
 .w-100 { width: 100%; }
 
 .section-subtitle {
