added responsiveness to card and designed pgdetails

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 @import "../src/styles/Cta.css";
 @import "../src/styles/BlogList.css";
 @import "../src/styles/Listing.css";
-
+@import "../src/styles/pgdetails.css";
 
 
 
