--- a/src/styles/pgdetails.css
+++ b/src/styles/pgdetails.css
@@ -8,29 +8,52 @@
  .bg_color{
     background-color: #e8e8e8;
  }
- .trapez1 {
-    border-left: 0px solid transparent;
-     border-right: 20px solid transparent;
-     border-top: 26px solid #f2d48d;
-     width: 140px;
-    font-size: 12px;
-     z-index: 2;
-  }.trapez2 {
-    border-left: 0px solid transparent;
-     border-right: 20px solid transparent;
-     border-top: 26px solid #f2d48d;
-     width: auto;
-     font-size: 12px;
-     z-index: 2;
-  }
+ .bg_review{
+    background-color: #f2d48d;
+ }
+@media(max-width:600px){
+    .trapez1 {
+        border-left: 0px solid transparent;
+        border-right: 20px solid transparent;
+        border-top: 20px solid #f2d48d;
+        width: auto;
+        padding-top: 5px;
+        font-size: 12px;
+        z-index: 2;
+      }.trapez2 {
+        border-left: 0px solid transparent;
+         border-right: 20px solid transparent;
+         border-top: 20px solid #f2d48d;
+         width: auto;
+         padding-top: 5px;
+         font-size: 12px;
+         z-index: 2;
+      }
+      .hideonsmall{
+        display:none;
+      }
+}
  
   
   
  @media (min-width: 600px) {
-    /**
-     * FOOTER
-     */
-  
+   
+     .trapez1 {
+        border-left: 0px solid transparent;
+         border-right: 20px solid transparent;
+         border-top: 26px solid #f2d48d;
+         width: 140px;
+        font-size: 12px;
+         z-index: 2;
+      }.trapez2 {
+        border-left: 0px solid transparent;
+         border-right: 20px solid transparent;
+         border-top: 26px solid #f2d48d;
+         width: auto;
+         font-size: 12px;
+         z-index: 2;
+      }
+      
   }
   
   /**
@@ -43,8 +66,9 @@
         height: 6.5rem;
         position:absolute;
         top:28%;
-        left:30%
+        left:28%
       }
+      
   }
   
   /**
