--- a/src/styles/pgdetails.css
+++ b/src/styles/pgdetails.css
@@ -25,6 +25,23 @@
  .nav-item:hover {
   border-bottom: 2px solid var(--orange-soda);
 }
+/* add media query for 360px  */
+@media(min-width:360px){
+  .visibleon360{
+    display:none;
+  }
+  
+}
+.visible360 {
+  display: none; /* Hide the component by default */
+}
+
+@media (min-width: 361px) {
+  .visible360 {
+    display: block; /* Show the component for widths greater than 360px */
+  }
+}
+
 @media(max-width:600px){
     .trapez1 {
         border-left: 0px solid transparent;
@@ -46,6 +63,7 @@
       .hideonsmall{
         display:none;
       }
+      
 }
  
   
