added search bar

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 @import "../src/styles/BlogList.css";
 @import "../src/styles/Listing.css";
 @import "../src/styles/pgdetails.css";
-
+@import "../src/styles/SearchBar.css";
 
 
 
