--- a/src/styles/Listing.css
+++ b/src/styles/Listing.css
@@ -57,8 +57,9 @@
    width: 100px;
    /* height: 20px; */
    position: absolute;
-   right: 0;
+   right:0;
    top: 0;
+   padding-right: 15%;
    z-index: 2;
 }
 
@@ -128,17 +129,17 @@
 }
 .verticleLine{
   border-left: 2px solid #cbcbcb;
-  height: 35px;
+  height: 60px;
   position:absolute;
-  top:33%;
-  left: 42.5%;
+  top:23%;
+  left: 41.9%;
 }
 .verticleLine2{
   border-left: 2px solid #cbcbcb;
-  height: 35px;
+  height: 60px;
   position:absolute;
-  top:33%;
-  left: 53.5%;
+  top:23%;
+  left: 54.5%;
 }
 
 .trapezoid1 {
