--- a/src/styles/Listing.css
+++ b/src/styles/Listing.css
@@ -46,7 +46,7 @@
   font-weight: 600;
 }
 .cbackgrnd{
-  background: linear-gradient(45deg, #ffffff, #fffbb3 220%);
+  background: linear-gradient(-85deg, #ffffff, #ff5a3d 800%);
 }
 
 
@@ -59,7 +59,7 @@
    position: absolute;
    right:0;
    top: 0;
-   padding-right: 20%;
+   padding-right: 12%;
    z-index: 2;
 }
 
@@ -200,3 +200,52 @@
 @media (min-width: 1200px) {
   
 }
+
+.loading-container {
+  width: 200px; /* Adjust the width and height as needed */
+  height: 100px;
+  perspective: 300px; /* Perspective value for 3D effect */
+}
+
+.spinner {
+  width: 100%;
+  height: 100%;
+  animation: spin 3s linear infinite;
+  transform-style: preserve-3d;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateY(0) scaleX(1);
+  }
+  50% {
+    transform: rotateY(180deg) scaleX(-1);
+  }
+  100% {
+    transform: rotateY(360deg) scaleX(1);
+  }
+}
+/* Define the fade-in and scale animation for the "No record found" message */
+@keyframes fadeInScale {
+  0% {
+    opacity: 0;
+    transform: scale(0.7);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.7);
+  }
+}
+
+/* Style for the "No record found" message */
+.no-record-found {
+  animation: fadeInScale 3s ease-in-out infinite;
+  opacity: 0;
+  font-size: 24px;
+  color: #333;
+}
+
