updated search and added modal

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 @import "../src/styles/Listing.css";
 @import "../src/styles/pgdetails.css";
 @import "../src/styles/SearchBar.css";
-
+@import"../src/styles/Gallery.css";
 
 
 
