edited spacing in Premium and popular ads css

--- a/src/styles/Featured.css
+++ b/src/styles/Featured.css
@@ -10,7 +10,8 @@
 }
 
 .property {
-  padding-block: var(--section-padding);
+  /* padding-block: var(--section-padding); */
+  padding-top: 3rem;
   
 }
 
